# echo-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  REAMDE.md  build.rs  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  rss.toml
src/: error.rs  handlers.rs  main.rs  models.rs  upstream.rs  xml.rs
static/: browserconfig.xml  input.css  site.webmanifest
templates/: error.html.j2  home.html.j2  index.html.tera
templates/components/: base-layout.html.j2  post-card.html.j2
