[package]
name = "echo-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
bytes = "1.10.1"
http-body = "1.0.1"
minijinja = "2.9.0"
tokio = { version = "1.44.2", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
npm_rs = "1.0.0"
